--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,7 @@ body{
   font-family: 'Archivo', sans-serif;
 
   background-image: url("../images/background.jpg");
-  height: 100vh auto;
-  width: 100% auto;
+  height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
